Enviando atualização para remoto

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,49 +1,34 @@
-# .gitpod.yml na raiz do seu projeto Spring Boot
-# Este arquivo é crucial para configurar seu ambiente no Gitpod.
+# .gitpod.yml
 
-# Imagem base com Java e ferramentas comuns.
-# gitpod/workspace-full-vnc é uma boa opção por ser completa.
-image: gitpod/workspace-full-vnc
+# Referencia o Dockerfile que criamos para configurar o ambiente
+image:
+  file: .gitpod.Dockerfile
 
+# Define as tarefas a serem executadas ao iniciar o workspace
 tasks:
-  - name: Install Java, Maven, and Build Project
-    init: |
-      # --- Instalações Iniciais ---
-      # Atualiza a lista de pacotes
-      sudo apt-get update
-      # Instala o OpenJDK 21 se já não estiver na imagem
-      sudo apt-get install -y openjdk-21-jdk
-      # Instala o Maven se já não estiver na imagem
-      sudo apt-get install -y maven
-
-      # --- Configurações de Ambiente (JAVA_HOME e PATH) ---
-      # Adiciona JAVA_HOME e PATH ao perfil do bash para a sessão
-      # Isso garante que o Java e o Maven sejam encontrados.
-      echo 'export JAVA_HOME="/usr/lib/jvm/java-21-openjdk-amd64"' >> ~/.bashrc
-      echo 'export PATH="$JAVA_HOME/bin:$PATH"' >> ~/.bashrc
-      # Recarrega o perfil do bash para que as variáveis entrem em vigor imediatamente
-      source ~/.bashrc
-
-      # --- Construção do Projeto Maven ---
-      # Navega para a pasta do seu projeto Spring Boot
-      # ATENÇÃO: Confirme que 'delivery-api' é o nome da pasta do seu projeto principal
-      # Pode ser que o .gitpod.yml esteja na raiz do Encontro3--FAT e o projeto esteja dentro de 'delivery-api'
-      cd delivery-api # Ajuste este caminho se necessário
-      echo "Executando mvn clean install..."
-      ./mvnw clean install -DskipTests=true # Instala dependências e compila, pulando testes para mais rapidez inicial
-      echo "Maven install concluído."
-
+  # 'init' é executado uma vez, ao criar/reconstruir o ambiente
+  - init: |
+      echo "Executando comandos de inicialização..."
+      cd delivery-api
+      ./mvnw clean install # Limpa e compila o projeto
+    # 'command' é executado sempre que o workspace inicia
     command: |
-      # --- Execução da Aplicação Spring Boot ---
-      # Recarrega o perfil do bash para garantir variáveis de ambiente
-      source ~/.bashrc
-      # Navega para a pasta do seu projeto Spring Boot
-      cd delivery-api # Ajuste este caminho se necessário
-      echo "Iniciando aplicação Spring Boot..."
-      ./mvnw spring-boot:run # Inicia a aplicação Spring Boot
-ports:
-  # A porta padrão do Spring Boot
-  - port: 8080
-    onOpen: open-browser # Abre uma nova aba no navegador com sua aplicação
-    # onOpen: open-preview # Ou use open-preview para abrir no painel lateral do Gitpod
+      echo "Iniciando a aplicação Spring Boot..."
+      cd delivery-api
+      ./mvnw spring-boot:run # Inicia sua aplicação
 
+# Define as portas que sua aplicação usa e como o Gitpod deve tratá-las
+ports:
+  - port: 8080
+    onOpen: open-browser # Abre a URL da porta 8080 automaticamente no navegador
+  - port: 35729 # Para LiveReload (se estiver usando)
+  - port: 8000 # Exemplos de outras portas que você pode usar
+  - port: 8001
+
+# Sugere extensões do VS Code para o ambiente Gitpod
+vscode:
+  extensions:
+    - redhat.java
+    - vscjava.vscode-java-debug
+    - vscjava.vscode-java-test
+    - vscjava.vscode-maven
