--- a/delivey-api/src/main/resources/application.properties
+++ b/delivey-api/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=delivey-api
+# Porta do servidor
+server.port=8080
+
+# Configuração do banco de dados H2
+spring.datasource.url=jdbc:h2:mem:deliverydb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Habilitar o console web do H2
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+# --- Adicione esta linha para permitir acesso remoto ---
+spring.h2.console.settings.web-allow-others=true
+
+# Hibernate cria automaticamente as tabelas (usando suas entidades)
+spring.jpa.hibernate.ddl-auto=update
+
+# Mostrar queries no console
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
