Enviando as classes controller e service atualizadas

--- a/deliverytech/src/main/resources/application.properties
+++ b/deliverytech/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 # Habilitar o console web do H2
-spring.h2.console.enabled=true
+spring.h2.console.enabled=false
 spring.h2.console.path=/h2-console
 # --- Adicione esta linha para permitir acesso remoto ---
 spring.h2.console.settings.web-allow-others=true
