--- a/deliverytech/pom.xml
+++ b/deliverytech/pom.xml
@@ -32,7 +32,13 @@
     </properties>
 
 
-    <dependencies> <dependency>
+    <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+ <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
