--- a/deliverytech/pom.xml
+++ b/deliverytech/pom.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.3</version>
+        <version>3.3.1</version>
         <relativePath/>
     </parent>
     <groupId>com.deliverytech</groupId>
-    <artifactId>delivey-api</artifactId>
+    <artifactId>delivery_api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>delivey-api</name>
+    <name>delivery_api</name>
     <description>Demo project for Spring Boot</description>
     <url/>
     <licenses>
@@ -31,14 +31,13 @@
         <lombok.version>1.18.30</lombok.version>
     </properties>
 
-
     <dependencies>
-
+    
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
- <dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
@@ -75,6 +74,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies> <build>
         <plugins>
             <plugin>
